--- a/src/landing-page/styles.css
+++ b/src/landing-page/styles.css
@@ -35,7 +35,7 @@ nav {
 .nav-booking-tab {
   display: flex;
   align-items: center;
-  padding: 30px 0.8rem;
+  padding: 1.875em 0.8em;
   border: none;
   border-bottom: 5px solid transparent;
   font-weight: var(--fw-semi-bold);
@@ -51,7 +51,7 @@ nav {
 /* Toggle Button */
 .mobile-toggle {
   display: none;
-  font-size: 1.5rem;
+  font-size: var(--fs-24);
   cursor: pointer;
 }
 
@@ -81,7 +81,7 @@ nav {
   width: 80%;
   max-height: 0;
   overflow: hidden;
-  padding: 0 2rem;
+  padding: 0 2em;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -94,14 +94,14 @@ nav {
 
 .mobile-nav.show {
   max-height: 300px;
-  padding: 1rem 2rem;
+  padding: 1em 2em;
   opacity: 1;
   transform: translateY(0);
 }
 
 .mobile-link {
   display: flex;
-  padding: 0.875rem;
+  padding: 0.875em;
   color: var(--clr-neutral-200);
   text-decoration: none;
   transition: transform 0.3s;
@@ -181,7 +181,7 @@ main .img-overlay h2 {
   max-width: 1440px;
   width: calc(100% - 4em); /* = 2em left + 2em right */
   margin: 0 auto;
-  padding: 0.825rem 2.25rem;
+  padding: 0.825em 2.25em;
   background-color: var(--clr-neutral-50);
   border-radius: 16px;
 }
@@ -196,7 +196,7 @@ main .img-overlay h2 {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  padding: 1.125rem 1rem;
+  padding: 1.125em 1em;
   border: none;
   border-bottom: 3px solid transparent;
   font-family: var(--font-family-base);
@@ -233,7 +233,7 @@ main .img-overlay h2 {
   position: relative;
   height: 68px;
   max-width: 19.625rem;
-  padding: 0.625rem 0.875rem;
+  padding: 0.625em 0.875em;
   border: 1px solid var(--clr-neutral-100);
   border-radius: 4px;
 }
@@ -283,7 +283,7 @@ main .img-overlay h2 {
 
 .input-with-icon input {
   width: 100%;
-  padding: 0 1.75rem;
+  padding: 0 1.75em;
   border: none;
   background: none;
   font-size: var(--fs-14);
@@ -297,7 +297,7 @@ main .img-overlay h2 {
 
 .input-with-icon select {
   width: 100%;
-  padding: 0 2rem;
+  padding: 0 2em;
 }
 
 .input-icon {
@@ -329,9 +329,13 @@ main .img-overlay h2 {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  padding: 1.5rem;
+  padding: 1.5em;
   margin: 60px auto 0 auto;
   max-width: 1232px;
+}
+
+.secondary-heading {
+  margin-bottom: .4rem;
 }
 
 .places .flex {
@@ -355,7 +359,7 @@ main .img-overlay h2 {
 
 .places-content {
   max-width: 390px;
-  padding: 3rem;
+  padding: 3em;
   min-width: 280px;
 }
 
@@ -364,6 +368,11 @@ main .img-overlay h2 {
   height: 90px;
   border-radius: 8px;
   object-fit: cover;
+  transition: transform 0.3s ease-out;
+}
+
+.places-content img:hover {
+  transform: scale(1.05);
 }
 
 /* ========== BOOKING BANNER SECTION ========== */
@@ -414,7 +423,7 @@ main .img-overlay h2 {
   z-index: 2;
   width: 100%;
   height: 100%;
-  padding: 1.5rem;
+  padding: 1.5em;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -472,16 +481,16 @@ main .img-overlay h2 {
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 2rem 2rem 0 2rem;
+  padding: 2em 2em 0 2em;
 }
 
 .slider-reviews-container .reviews-swiper {
   width: 100%;
-  padding: 1rem 0;
+  padding: 1em 0;
 }
 
 .slider-reviews-container .swiper-wrapper {
-  padding-bottom: 2rem;
+  padding-bottom: 2em;
   cursor: grab;
 }
 
@@ -501,7 +510,7 @@ main .img-overlay h2 {
   max-width: 430px;
   height: 100%;
   max-height: 586px;
-  padding: 1.5rem;
+  padding: 1.5em;
   background-color: #fff;
   border-radius: 16px;
   box-shadow: 10px 16px 80px var(--clr-primary-400);
@@ -513,7 +522,6 @@ main .img-overlay h2 {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
@@ -583,7 +591,7 @@ main .img-overlay h2 {
 
 .subscribe-form input {
   max-width: 420px;
-  padding: 18px;
+  padding: 1.125em;
   font-size: var(--fs-16);
   color: var(--clr-neutral-200);
   border: none;
@@ -610,11 +618,11 @@ footer .flex-no-wrap {
   display: flex;
   justify-content: space-around;
   flex-wrap: nowrap;
-  padding: 12rem 0 4rem 0;
+  padding: 12em 0 4em 0;
 }
 
 .links {
-  padding: 0 1rem;
+  padding: 0 1em;
 }
 
 .links h1 {
@@ -631,7 +639,7 @@ footer .flex-no-wrap a {
   color: var(--clr-neutral-100);
   text-decoration: none;
   display: block;
-  padding: 0.2rem 0;
+  padding: 0.2em 0;
 }
 
 .socials-company-logo {
@@ -647,4 +655,10 @@ footer .flex-no-wrap a {
 .social-links img {
   width: 24px;
   height: 24px;
+}
+
+footer a:hover,
+footer a:focus {
+  transform: scale(1.02) translateZ(0);
+  transition: transform 0.2s ease-out;
 }
