--- a/src/flight-page/flightsearch.css
+++ b/src/flight-page/flightsearch.css
@@ -1,10 +1,10 @@
-.booking-container .booking-tabs h1 {
+.booking-tabs h1 {
   font-size: var(--fs-20);
   font-weight: var(--fw-semi-bold);
   padding: 1rem 0;
 }
 
-/* Main container */
+/* Peoples and travel locations */
 .world-map {
   width: 100%;
   background-color: var(--clr-primary-400, #0ea5e9);
@@ -127,8 +127,8 @@
   border-radius: 16px;
 
   grid-template-areas:
-    "box-1 box-1 box-2 box-3"
-    "box-1 box-1 box-4 box-5";
+    'box-1 box-1 box-2 box-3'
+    'box-1 box-1 box-4 box-5';
 
   grid-template-columns: minmax(380px, 1.5fr) 1fr 1fr 1fr;
   grid-template-rows: 200px 200px;
@@ -181,7 +181,7 @@
 }
 
 .travel-location-card.card-1 .text-center h2 {
-  font-size: clamp(.8rem, 3vw, 1.5rem);
+  font-size: clamp(0.8rem, 3vw, 1.5rem);
   font-weight: var(--fw-semi-bold);
 }
 
@@ -189,7 +189,6 @@
   justify-content: center;
   width: 100%;
   margin-top: 1rem;
-  transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 /* Image Cards */
@@ -209,11 +208,18 @@
   transition: transform 0.3s ease-out;
 }
 
-
-.travel-location-card.card-2 { grid-area: box-2; }
-.travel-location-card.card-3 { grid-area: box-3; }
-.travel-location-card.card-4 { grid-area: box-4; }
-.travel-location-card.card-5 { grid-area: box-5; }
+.travel-location-card.card-2 {
+  grid-area: box-2;
+}
+.travel-location-card.card-3 {
+  grid-area: box-3;
+}
+.travel-location-card.card-4 {
+  grid-area: box-4;
+}
+.travel-location-card.card-5 {
+  grid-area: box-5;
+}
 
 /* Hover effects for cards */
 .travel-location-card img:hover {
@@ -236,4 +242,3 @@
   background-color: var(--clr-neutral-50);
   color: var(--clr-neutral-200);
 }
-
