--- a/src/global-utilities/responsive.css
+++ b/src/global-utilities/responsive.css
@@ -1,7 +1,7 @@
 /* Responsive Breakpoints */
 
 /* Tablet and Smaller Desktops (max-width: 976px) */
-@media (max-width: 1090px) {
+@media (max-width: 1098px) {
   main .img-overlay p {
     max-width: 900px;
     font-size: var(--fs-28); /* Using clamped fs-28 */
@@ -58,8 +58,66 @@
     margin-top: 1rem;
     margin-left: 0;
   }
-  .grid-2-col.layout {
+  .grid-2-col.layout,
+  .flight-booking-payment {
     grid-template-columns: 1fr;
+  }
+  .places-card-hotel.places-card .flex {
+    flex-direction: column;
+  }
+  .places-heading-hotel.places-heading .btn-stroke {
+    margin-top: 1em;
+    font-size: var(--fs-12); /* Using clamped fs-12 */
+  }
+  .places-heading-hotel.places-heading .grid {
+    margin-right: 2rem;
+  }
+  .places-heading-hotel.places-content {
+    padding: 1rem;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .places-heading-hotel.places-content img {
+    width: 220px;
+    height: 220px;
+    margin: 0 0 16px 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+}
+
+@media (max-width: 914px) {
+  .flight-ticket {
+    gap: 2em;
+  }
+  .flight-time {
+    padding: 0;
+  }
+  .flight-time h1,
+  .ticket-code h1 {
+    font-size: var(--fs-24);
+  }
+  .flight-time p,
+  .ticket-code p {
+    font-size: var(--fs-12);
+  }
+  .ticket-profile img {
+    max-width: 40px;
+    margin-right: 0.5em;
+  }
+  .ticket-profile h2 {
+    font-size: var(--fs-12);
+    padding-left: 1.25em;
+  }
+  .profile-name h1 {
+    font-size: var(--fs-16);
+  }
+  .profile-name p {
+    font-size: var(--fs-10);
+  }
+  .ticket-barcode img {
+    max-width: 148px;
   }
 }
 
@@ -180,6 +238,44 @@
   .itinerary-time.flex {
     gap: 0.1em;
   }
+
+  .flight-ticket {
+    padding: 2em 1em;
+  }
+  .flight-ticket {
+    gap: 2em;
+  }
+  .flight-time h1,
+  .ticket-code h1 {
+    font-size: var(--fs-24);
+  }
+  .flight-time p,
+  .ticket-code p {
+    font-size: var(--fs-12);
+  }
+  .ticket-profile img {
+    max-width: 40px;
+    margin-right: 0.5em;
+  }
+  .ticket-profile h2 {
+    font-size: var(--fs-12);
+    padding-left: 1.25em;
+  }
+  .profile-name h1 {
+    font-size: var(--fs-16);
+  }
+  .profile-name p {
+    font-size: var(--fs-10);
+  }
+  .ticket-barcode img {
+    max-width: 148px;
+  }
+  .modal-content {
+    padding: 2em;
+  }
+  .floating-input-group {
+    margin-bottom: 1.125em;
+  }
 }
 
 /* Medium Smartphones (max-width: 560px) */
@@ -218,6 +314,20 @@
   .subscribe-form button {
     font-size: var(--fs-12); /* Using clamped fs-12 */
     width: 100%;
+  }
+  .flight-ticket {
+    gap: 1em;
+  }
+  .plane-details.grid-4 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .modal-content h2 {
+    padding-bottom: 0.65em;
+    font-size: var(--fs-34);
+  }
+  .modal-close {
+    top: 1.25rem;
+    right: 1.25rem;
   }
 }
 
