--- a/src/global-utilities/utilities.css
+++ b/src/global-utilities/utilities.css
@@ -34,6 +34,7 @@
   --fs-24: clamp(1.25rem, 3.5vw, 1.5rem); /* Min 20px, Max 24px */
   --fs-28: clamp(1.5rem, 4vw, 1.75rem); /* Min 24px, Max 28px */
   --fs-32: clamp(1.75rem, 4.5vw, 2rem); /* Min 28px, Max 32px */
+  --fs-34: clamp(1.875rem, 4.5vw, 2.125rem); /* Min 30px, Max 34px */
   --fs-36: clamp(2rem, 5vw, 2.25rem); /* Min 32px, Max 36px */
   --fs-40: clamp(2.25rem, 5.5vw, 2.5rem); /* Min 36px, Max 40px */
   --fs-45: clamp(2.5rem, 6vw, 2.8125rem); /* Min 40px, Max 45px */
