--- a/src/landing-page/styles.css
+++ b/src/landing-page/styles.css
@@ -1,6 +1,6 @@
 /* ========== HEADER & NAVIGATION ========== */
 header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 6;
