--- a/src/global-utilities/utilities.css
+++ b/src/global-utilities/utilities.css
@@ -31,6 +31,7 @@
   --fs-16: clamp(0.875rem, 2.5vw, 1rem); /* Min 14px, Max 16px */
   --fs-18: clamp(1rem, 2.8vw, 1.125rem); /* Min 16px, Max 18px */
   --fs-20: clamp(1.125rem, 3vw, 1.25rem); /* Min 18px, Max 20px */
+  --fs-22: clamp(20px, 3.2vw, 1.375rem); /* Min 18px, Max 20px */
   --fs-24: clamp(1.25rem, 3.5vw, 1.5rem); /* Min 20px, Max 24px */
   --fs-28: clamp(1.5rem, 4vw, 1.75rem); /* Min 24px, Max 28px */
   --fs-32: clamp(1.75rem, 4.5vw, 2rem); /* Min 28px, Max 32px */
@@ -209,6 +210,9 @@ svg {
 .fs-20 {
   font-size: var(--fs-20);
 }
+.fs-22 {
+  font-size: var(--fs-22);
+}
 .fs-24 {
   font-size: var(--fs-24);
 }
@@ -301,8 +305,8 @@ svg {
 .btn-stroke,
 .btn-secondary,
 .btn-primary {
-  transition: transform 0.25s ease, background-color 0.25s ease,
-    color 0.25s ease, box-shadow 0.25s ease, filter 0.25s ease;
+  transition: transform 0.1s ease, background-color 0.1s ease, color 0.1s ease,
+    box-shadow 0.1s ease, filter 0.1s ease;
   backface-visibility: hidden;
   will-change: transform;
 }
@@ -318,7 +322,6 @@ svg {
 .btn-primary:focus,
 .btn-secondary:focus,
 .btn-stroke:focus {
-  transform: scale(1.02);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
 }
 
@@ -343,8 +346,7 @@ svg {
 .btn-stroke:hover,
 .btn-stroke:focus {
   background-color: var(--clr-primary-400);
-  color: white;
-  filter: none; /* skip darken since background changes */
+  filter: brightness(0.9);
 }
 
 /* Specific Button Styles */
@@ -368,6 +370,11 @@ svg {
   color: var(--clr-neutral-200);
   background-color: transparent;
   cursor: pointer;
+}
+
+.btn-white.active {
+  border-bottom: 5px solid var(--clr-primary-400);
+  font-weight: var(--fw-bold);
 }
 
 .btn-stroke {
