--- a/src/stay-page/stayslisting.css
+++ b/src/stay-page/stayslisting.css
@@ -357,7 +357,6 @@ input[type='checkbox']:checked {
   max-width: 333.8px;
   max-height: 300px;
   position: relative;
-  display: inline-block;
   overflow: hidden;
 }
 
@@ -418,7 +417,7 @@ input[type='checkbox']:checked {
   max-width: 300px;
 }
 
-.hotel-details .hotel-location {
+.hotel-location {
   display: flex;
   align-items: center;
   padding: 0.8em 0 1em 0;
@@ -474,11 +473,14 @@ input[type='checkbox']:checked {
 
 /* Responsive breakpoints */
 @media (max-width: 1409px) {
-  .hotel-logo {
+  .stays-listing .hotel-info-container {
+    padding: 0 0 3em 0;
+  }
+  .stays-listing .hotel-logo {
     width: 100%;
     max-width: 684px;
   }
-  .hotel-logo img {
+  .stays-listing .hotel-logo img {
     width: 100%;
     max-width: 684px;
     border-radius: 0;
