feat: account pages done and some ui improvements at home page.

--- a/src/flight-page/flightlisting.css
+++ b/src/flight-page/flightlisting.css
@@ -1,27 +1,47 @@
+header {
+  position: fixed;
+  padding-top: 0;
+  background-color: var(--clr-neutral-50);
+  padding-inline: 1em;
+}
+
+.nav-left,
+.nav-right button {
+  display: flex;
+  align-items: center;
+}
+
 .company-logo {
   margin: 0 0 0 1.125em;
 }
 
-.flight-booking-container {
-  width: 100%;
+#booking-details {
   margin: 140px auto 2rem auto;
   max-width: 1440px;
-  padding-right: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
 }
 
-.flight-booking-form {
+.booking-tabs h1 {
+  font-size: var(--fs-20);
+  font-weight: var(--fw-semi-bold);
+  padding-bottom: 0.5em;
+}
+
+.flight-booking-container {
+  margin: 0 1em;
+}
+
+/* .flight-booking-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.booking-flight-form {
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
-  padding: 0 2em;
   width: 100%;
-}
-
-.flight-booking-container .trip {
-  min-width: 140px;
 }
 
 .flight-form-group {
@@ -66,7 +86,7 @@
 
 .btn-mobile {
   display: none;
-}
+} */
 
 /* User Navigation */
 
