--- a/src/flight-page/flightdetails.css
+++ b/src/flight-page/flightdetails.css
@@ -1,3 +1,15 @@
+header {
+  position: fixed;
+  padding-top: 0;
+  background-color: var(--clr-neutral-50);
+}
+
+.nav-left,
+.nav-right button {
+  display: flex;
+  align-items: center;
+}
+
 .company-logo {
   margin: 0 0 0 1.125em;
 }
