--- a/src/landing-page/styles.css
+++ b/src/landing-page/styles.css
@@ -1,11 +1,27 @@
 /* ========== HEADER & NAVIGATION ========== */
 header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 6;
+  width: 100%;
+  padding: 2.5em 4em 0 4em;
+  background-color: transparent;
+  transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out,
+    transform 0.2s ease;
+}
+
+header.sticky {
   position: fixed;
   top: 0;
   left: 0;
   z-index: 6;
   width: 100%;
-  padding: 0 2rem;
+  padding-top: 0;
+  margin: 0 auto;
+  padding-inline: 2rem;
+  transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out,
+    transform 0.2s ease;
   background-color: var(--clr-neutral-50);
 }
 
@@ -17,46 +33,53 @@ nav {
   height: 90px;
 }
 
+.nav-link.links-black span {
+  color: var(--clr-neutral-200); /* becomes black-ish */
+}
+
+.nav-link span {
+  color: var(--clr-neutral-50); /* default white */
+  transition: color 0.2s ease;
+}
+
 .company-logo {
   max-width: 110px;
   margin-right: 124px;
 }
 
-.nav-left,
-.nav-right button {
-  display: flex;
-  align-items: center;
-}
-
-.nav-booking-tab:not(.active):hover {
+.nav-booking-tab:not(.active):hover,
+.nav-booking-account:not(.active):hover {
   border-bottom: 5px solid var(--clr-primary-400);
 }
 
-.nav-booking-tab {
+.nav-booking-tab,
+.nav-booking-account {
   display: flex;
   align-items: center;
+  margin-inline: 0.2em;
   padding: 1.875em 0.8em;
   border: none;
   border-bottom: 5px solid transparent;
   font-weight: var(--fw-semi-bold);
   color: var(--clr-neutral-200);
-  transition: all 0.3s;
+  transition: all 0.1s;
 }
 
-.nav-booking-tab.active {
+.nav-booking-tab.active,
+.nav-booking-account.active {
   border-color: var(--clr-primary-400);
-  font-weight: var(--fw-bold);
 }
 
 /* Toggle Button */
 .mobile-toggle {
   display: none;
-  font-size: var(--fs-24);
   cursor: pointer;
 }
 
 .mobile-toggle .menu-icon {
-  display: inline;
+  display: flex;
+  align-items: center;
+  z-index: 5;
 }
 
 .mobile-toggle .close-icon {
@@ -69,7 +92,9 @@ nav {
 }
 
 .mobile-toggle.active .close-icon {
-  display: inline;
+  display: flex;
+  align-items: center;
+  z-index: 5;
 }
 
 /* ========== MOBILE NAVIGATION ========== */
@@ -85,11 +110,12 @@ nav {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  background-color: white;
+  background-color: var(--clr-neutral-50);
   border-radius: 0 0 4px 4px;
   opacity: 0;
   transform: translateY(-20px);
-  transition: all 0.3s ease-in-out;
+  transition: max-height 0.2s ease, padding 0.2s ease, opacity 0.2s ease,
+    transform 0.2s ease;
 }
 
 .mobile-nav.show {
@@ -100,16 +126,18 @@ nav {
 }
 
 .mobile-link {
+  max-width: fit-content;
   display: flex;
   padding: 0.875em;
+  border-bottom: 2px solid transparent;
   color: var(--clr-neutral-200);
   text-decoration: none;
-  transition: transform 0.3s;
+  transition: transform 0.2s;
 }
 
 .mobile-link:hover,
 .mobile-link:focus {
-  transform: scale(1.01);
+  border-bottom: 2px solid var(--clr-primary-400);
 }
 
 /* ========== MAIN SLIDER (HERO SECTION) ========== */
@@ -121,7 +149,9 @@ main {
 }
 
 main .swiper {
+  padding: 1.875em;
   height: 80vh;
+  overflow: hidden;
 }
 
 main .overlay::after {
@@ -137,7 +167,7 @@ main .overlay::after {
 main .overlay img {
   width: 100%;
   height: 100%;
-  margin-top: 30px;
+  border-radius: 24px;
   object-fit: cover;
 }
 
@@ -149,6 +179,14 @@ main .img-overlay {
   z-index: 5;
   margin-top: -2rem;
   text-align: center;
+}
+
+main .img-overlay p {
+  line-height: 0.8;
+}
+
+main .img-overlay h1 {
+  line-height: 1.4;
 }
 
 main .img-overlay p,
@@ -205,36 +243,56 @@ main .img-overlay h2 {
   color: var(--clr-neutral-200);
   background-color: transparent;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all 0.1s;
 }
 
 .booking-tab.active {
   border-color: var(--clr-primary-400);
-  font-weight: var(--fw-bold);
 }
 
 /* Forms */
 
 .booking-form {
   display: flex;
-  flex-wrap: wrap;
   align-items: flex-end;
   gap: 24px;
-  margin: 1.5rem;
+  margin: 1.5em 0;
+}
+
+.booking-flight-form .grid {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 0.5fr 0.2fr 1fr 0.5fr;
+  gap: 1em;
+}
+
+.booking-stay-form .grid {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 0.8fr 0.5fr 0.5fr 0.6fr;
+  gap: 1em;
 }
 
 .booking-form .trip {
   min-width: 140px;
 }
 
+.return-depart {
+  width: 100%;
+  display: flex;
+  gap: 1em;
+}
+
 .form-group {
   display: flex;
   flex-direction: column;
   position: relative;
+  width: 100%;
   height: 68px;
   padding: 0.625em 0.875em;
   border: 1px solid var(--clr-neutral-100);
   border-radius: 4px;
+  transition: border 0.1s ease, box-shadow 0.1s ease;
 }
 
 .form-group label {
@@ -253,6 +311,19 @@ main .img-overlay h2 {
   background: none;
 }
 
+input[type='date'] {
+  cursor: pointer !important;
+}
+
+.form-group input[type='text'] {
+  cursor: text;
+}
+
+.form-group:focus-within {
+  border-color: var(--clr-primary-400);
+  box-shadow: 0 0 0 2px rgba(141, 211, 187, 0.25);
+}
+
 /* Swap Icon */
 .swap-icon {
   position: absolute;
@@ -269,8 +340,12 @@ main .img-overlay h2 {
   display: flex;
   justify-content: flex-end;
   gap: 10px;
-  margin: 0.9375rem 1.4em 0 0;
   max-height: 48px;
+}
+
+.actions .btn-black {
+  margin: 1em;
+  padding: 0;
 }
 
 /* Input with Icons */
@@ -282,7 +357,7 @@ main .img-overlay h2 {
 
 .input-with-icon input {
   width: 100%;
-  padding: 0 1.75em;
+  padding: 0 2em;
   border: none;
   background: none;
   font-size: var(--fs-14);
@@ -291,6 +366,10 @@ main .img-overlay h2 {
 
 .input-calendar input {
   padding: 0;
+  cursor: pointer;
+}
+
+.input-calendar-icon {
   cursor: pointer;
 }
 
@@ -342,12 +421,13 @@ main .img-overlay h2 {
   flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
+  padding: 1em;
   max-width: 1232px;
   margin: auto;
 }
 
 .places-card {
-  margin: 2rem;
+  margin: 2em 0;
   max-width: 1232px;
   display: flex;
   flex-wrap: wrap;
@@ -358,7 +438,7 @@ main .img-overlay h2 {
 
 .places-content {
   max-width: 390px;
-  padding: 3em;
+  margin: 2em;
   min-width: 280px;
 }
 
