fix: main hero was fixed and some changes to stays booking details pages.

--- a/src/global-utilities/utilities.css
+++ b/src/global-utilities/utilities.css
@@ -413,3 +413,10 @@ svg {
 .text-center {
   text-align: center;
 }
+
+.limit-text-to-1-line {
+  max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
