--- a/src/css/stay-page/stayslisting.css
+++ b/src/css/stay-page/stayslisting.css
@@ -368,12 +368,11 @@ input[type='checkbox']:checked {
 }
 
 /*=== Flight Card ===*/
-.hotel-card {
+
+#stayCardContainer {
   display: flex;
-  max-width: 100%;
   flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  gap: 2em;
 }
 
 .hotel-info {
@@ -426,7 +425,7 @@ input[type='checkbox']:checked {
   border-top-left-radius: 12px;
   border-bottom-left-radius: 12px;
   overflow: hidden;
-  max-height: 300px;
+  height: 300px;
   object-fit: cover;
   margin: 0 auto;
 }
@@ -508,8 +507,8 @@ input[type='checkbox']:checked {
 
 /* Responsive breakpoints */
 @media (max-width: 1409px) {
-  .hotel-card.stays-listing {
-    gap: 2em;
+  .hotel-logo img {
+    max-height: 300px;
   }
   .hotel-info {
     gap: 0.5em;
