--- a/src/css/flight-page/flightdetails.css
+++ b/src/css/flight-page/flightdetails.css
@@ -30,6 +30,7 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 1em;
 }
 
 .flight-details-location {
@@ -48,7 +49,7 @@ header {
 }
 
 .flight-details-btn .btn-primary {
-  padding: 0.8em 2.5em;
+  padding: 0.8rem 2.5em;
   font-weight: var(--fw-semi-bold);
 }
 
@@ -61,6 +62,7 @@ header {
 .flight-details-banner img {
   width: 100%;
   min-height: 260px;
+  max-height: 474px;
   height: 100%;
   object-fit: cover;
   transition: transform 0.3s ease-out;
