--- a/css/utils/utilities.css
+++ b/css/utils/utilities.css
@@ -24,26 +24,26 @@
 
   /* Font Sizes*/
   /* Clamped Font Sizes */
-  --fs-8: clamp(0.6rem, 1.5vw, 0.5rem); /* Min 9.6px, Max 8px */
-  --fs-10: clamp(0.75rem, 1.8vw, 0.625rem); /* Min 12px, Max 10px */
-  --fs-12: clamp(0.875rem, 2vw, 0.75rem); /* Min 14px, Max 12px */
-  --fs-14: clamp(1rem, 2.2vw, 0.875rem); /* Min 16px, Max 14px */
-  --fs-16: clamp(1.125rem, 2.5vw, 1rem); /* Min 18px, Max 16px */
-  --fs-18: clamp(1.25rem, 2.8vw, 1.125rem); /* Min 20px, Max 18px */
-  --fs-20: clamp(1.375rem, 3vw, 1.25rem); /* Min 22px, Max 20px */
-  --fs-22: clamp(1.5rem, 3.2vw, 1.375rem); /* Min 24px, Max 22px */
-  --fs-24: clamp(1.625rem, 3.5vw, 1.5rem); /* Min 26px, Max 24px */
-  --fs-28: clamp(1.875rem, 4vw, 1.75rem); /* Min 30px, Max 28px */
-  --fs-32: clamp(2.125rem, 4.5vw, 2rem); /* Min 34px, Max 32px */
-  --fs-34: clamp(2.25rem, 4.5vw, 2.125rem); /* Min 36px, Max 34px */
-  --fs-36: clamp(2.375rem, 5vw, 2.25rem); /* Min 38px, Max 36px */
-  --fs-40: clamp(2.625rem, 5.5vw, 2.5rem); /* Min 42px, Max 40px */
-  --fs-45: clamp(2.875rem, 6vw, 2.8125rem); /* Min 46px, Max 45px */
-  --fs-50: clamp(3.125rem, 7vw, 3.125rem); /* Min 50px, Max 50px */
-  --fs-54: clamp(3.375rem, 7vw, 3.375rem); /* Min 54px, Max 54px */
-  --fs-58: clamp(3.625rem, 7.5vw, 3.625rem); /* Min 58px, Max 58px */
-  --fs-64: clamp(4rem, 8vw, 4rem); /* Min 64px, Max 64px */
-  --fs-94: clamp(5.25rem, 10vw, 5.875rem); /* Min 84px, Max 94px */
+  --fs-8: clamp(0.4rem, 1.5vw, 0.5rem); /* Min 6.4px, Max 8px */
+  --fs-10: clamp(0.5rem, 1.8vw, 0.625rem); /* Min 8px, Max 10px */
+  --fs-12: clamp(0.6rem, 2vw, 0.75rem); /* Min 9.6px, Max 12px */
+  --fs-14: clamp(0.75rem, 2.2vw, 0.875rem); /* Min 12px, Max 14px */
+  --fs-16: clamp(0.875rem, 2.5vw, 1rem); /* Min 14px, Max 16px */
+  --fs-18: clamp(1rem, 2.8vw, 1.125rem); /* Min 16px, Max 18px */
+  --fs-20: clamp(1.125rem, 3vw, 1.25rem); /* Min 18px, Max 20px */
+  --fs-22: clamp(20px, 3.2vw, 1.375rem); /* Min 18px, Max 20px */
+  --fs-24: clamp(1.25rem, 3.5vw, 1.5rem); /* Min 20px, Max 24px */
+  --fs-28: clamp(1.5rem, 4vw, 1.75rem); /* Min 24px, Max 28px */
+  --fs-32: clamp(1.75rem, 4.5vw, 2rem); /* Min 28px, Max 32px */
+  --fs-34: clamp(1.875rem, 4.5vw, 2.125rem); /* Min 30px, Max 34px */
+  --fs-36: clamp(2rem, 5vw, 2.25rem); /* Min 32px, Max 36px */
+  --fs-40: clamp(2.25rem, 5.5vw, 2.5rem); /* Min 36px, Max 40px */
+  --fs-45: clamp(2.5rem, 6vw, 2.8125rem); /* Min 40px, Max 45px */
+  --fs-50: clamp(2.625rem, 7vw, 3.125rem); /* Min 40px, Max 45px */
+  --fs-54: clamp(3rem, 7vw, 3.375rem); /* Min 48px, Max 54px */
+  --fs-58: clamp(3.25rem, 7.5vw, 3.625rem); /* Min 52px, Max 58px */
+  --fs-64: clamp(3.5rem, 8vw, 4rem); /* Min 56px, Max 64px */
+  --fs-94: clamp(4.5rem, 10vw, 5.875rem); /* Min 72px, Max 94px */
 }
 
 /* ========== BASE STYLES / CSS RESET ========== */
