--- a/public/css/utils/utilities.css
+++ b/public/css/utils/utilities.css
@@ -24,10 +24,10 @@
 
   /* Font Sizes*/
   /* Clamped Font Sizes */
-  --fs-8: clamp(0.4rem, 1.5vw, 0.5rem); /* Min 6.4px, Max 8px */
-  --fs-10: clamp(0.5rem, 1.8vw, 0.625rem); /* Min 8px, Max 10px */
-  --fs-12: clamp(0.6rem, 2vw, 0.75rem); /* Min 9.6px, Max 12px */
-  --fs-14: clamp(0.75rem, 2.2vw, 0.875rem); /* Min 12px, Max 14px */
+  --fs-8: clamp(0.5rem, 1.5vw, 0.5rem); /* Min 6.4px, Max 8px */
+  --fs-10: clamp(0.6rem, 1.8vw, 0.625rem); /* Min 8px, Max 10px */
+  --fs-12: clamp(0.7rem, 2vw, 0.75rem); /* Min 9.6px, Max 12px */
+  --fs-14: clamp(0.8rem, 2.2vw, 0.875rem); /* Min 12px, Max 14px */
   --fs-16: clamp(0.875rem, 2.5vw, 1rem); /* Min 14px, Max 16px */
   --fs-18: clamp(1rem, 2.8vw, 1.125rem); /* Min 16px, Max 18px */
   --fs-20: clamp(1.125rem, 3vw, 1.25rem); /* Min 18px, Max 20px */
@@ -305,8 +305,12 @@ svg {
 .btn-stroke,
 .btn-secondary,
 .btn-primary {
-  transition: transform 0.1s ease, background-color 0.1s ease, color 0.1s ease,
-    box-shadow 0.1s ease, filter 0.1s ease;
+  transition:
+    transform 0.1s ease,
+    background-color 0.1s ease,
+    color 0.1s ease,
+    box-shadow 0.1s ease,
+    filter 0.1s ease;
   backface-visibility: hidden;
   will-change: transform;
 }
